--- a/css/styles.css
+++ b/css/styles.css
@@ -154,16 +154,19 @@ body {
 /* --------------MAIN STUDIO-------------- */
 
 .hero {
+  padding-top: 188px;
+  padding-bottom: 188px;
+
   color: var(--white-color);
   background-color: var(--title-color);
 }
 
-.hero-wrap {
-  padding: 188px 317px;
-}
-
 .hero-title {
   margin-bottom: 48px;
+  margin-left: auto;
+  margin-right: auto;
+
+  max-width: 494px;
 
   font-weight: 700;
   font-size: 56px;
